--- a/templates/sucess.html
+++ b/templates/sucess.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="static/styles.css">
 </head>
-<body style="display: flex;align-items: center;justify-content: center;align-content: center;">
+<body>
     <h1 style="color:aqua;">Successfully created the account</h1>
+    <div>
+        <form action="check" >
+            <button type="submit" id="details-button">Details</button>
+        </form>
+    </div>
 </body>
 </html>
