--- a/static/styles.css
+++ b/static/styles.css
@@ -1,8 +1,10 @@
 body{
+    background-image: url('bg.jpg');
+    background-size: cover;
     display: flex;
     flex-direction: column;
-    align-content: center;
     align-items: center;
+    align-content: center;
     justify-content: center;
 }
 .container{
@@ -20,8 +22,15 @@ body{
 }
 
 .container >input{
+    
     margin:15px;
     font-size: 20px;
+}
+.container >input:hover{
+    
+    border: none;
+    outline: none;
+    border-bottom: 2px solid black;
 }
 
 #button{
@@ -29,4 +38,35 @@ body{
     background-color: pink;
     border-radius: 8px;
 
+}
+
+#details-button{
+    font-size: 25px;
+    border-radius: 8px;
+    background-color: rgb(0, 255, 255);
+}
+
+#details-button:hover{
+    transform: scale(1.1);
+    background-color: aqua;
+    box-shadow: 4px 4px 8px ;
+}
+table {
+    
+    border-collapse: collapse;
+    margin-bottom: 20px;
+}
+
+th, td {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+tr:hover {
+    background-color: #f5f5f5;
 }
